--- a/app/package.json
+++ b/app/package.json
@@ -17,7 +17,9 @@
   },
   "dependencies": {
     "@elevenlabs/react": "^0.6.0",
+    "form-data": "^4.0.4",
     "lucide-react": "^0.344.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
